refactor(LottoTest): 당첨 로또 테스트 케이스 변경
기본 입력5 + 보너스1 에서 기본 입력6 + 보너스1로 변경